Using push command, to pull the changes in another local repositorie

--- a/GitInPracticeRedux.asciidoc
+++ b/GitInPracticeRedux.asciidoc
@@ -1,2 +1,3 @@
-First change
-First push to a remote respositorie
+First change /n
+First push to a remote respositorie /n
+Test line for push command
