--- a/GitInPracticeRedux.asciidoc
+++ b/GitInPracticeRedux.asciidoc
@@ -1,4 +1,5 @@
 First change 
 First push to a remote respository  
 Test line to use push command 
-Test line to use fetch command
+Test line to use fetch command 
+New branch
