Add spacing between chapters

--- a/01-IntroducingGitInPractice.asciidoc
+++ b/01-IntroducingGitInPractice.asciidoc
@@ -1,5 +1,5 @@
-First change 
-First push to a remote respository  
-Test line to use push command 
-Test line to use fetch command 
-New branch in github
+First change +
+First push to a remote respository +
+Test line to use push command +
+Test line to use fetch command +
+New branch in github +
