--- a/01-IntroducingGitInPractice.asciidoc
+++ b/01-IntroducingGitInPractice.asciidoc
@@ -1,6 +1,8 @@
 = Git In Practice
 ## Chapter 1
 It is truth universally acknowledged, that a single person in possession of good source code, must be in want of a version control system.
+# Why git was created 
+# Creating a new local Git repository
 
 ## Chapter 2
 //TODO: write two chapters
